Tayler--working on sql connection issue

--- a/src/main/resources/static/userForm.html
+++ b/src/main/resources/static/userForm.html
@@ -25,7 +25,7 @@
       <label for="username">Username:</label>
       <input type="text" id="username" name="username" required><br>
 
-      <label for+"address">Address:</label>
+      <label for="address">Address:</label>
      <input type ="text" id="address" name="address" required><br>
 
        <input type="submit" value="Register">
